[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/hud.gd" type="Script" id=1]
[ext_resource path="res://scripts/hud_ctnSlidersProduction.gd" type="Script" id=2]
[ext_resource path="res://scripts/hud_ctnSliders.gd" type="Script" id=3]
[ext_resource path="res://fonts/debugFont.fnt" type="BitmapFont" id=4]

[node name="hud" type="Node"]

script/script = ExtResource( 1 )

[node name="hudPriority" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 576.0
margin/right = 249.0
margin/bottom = 763.0

[node name="ctnSlidersProduction" type="Node" parent="hudPriority"]

script/script = ExtResource( 2 )

[node name="sldRefining" type="HSlider" parent="hudPriority/ctnSlidersProduction"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 85.0
margin/top = 710.0
margin/right = 245.0
margin/bottom = 726.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="sldCrafting" type="HSlider" parent="hudPriority/ctnSlidersProduction"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 85.0
margin/top = 732.0
margin/right = 245.0
margin/bottom = 748.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="sldScrapping" type="HSlider" parent="hudPriority/ctnSlidersProduction"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 85.0
margin/top = 690.0
margin/right = 245.0
margin/bottom = 706.0
range/min = 0.0
range/max = 100.0
range/step = 0.5
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="ctnSliders" type="Node" parent="hudPriority"]

script/script = ExtResource( 3 )

[node name="sldFishing" type="HSlider" parent="hudPriority/ctnSliders"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 86.0
margin/top = 614.0
margin/right = 246.0
margin/bottom = 630.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="sldDefecating" type="HSlider" parent="hudPriority/ctnSliders"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 86.0
margin/top = 633.0
margin/right = 246.0
margin/bottom = 649.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="lblSliders" type="Node" parent="hudPriority"]

[node name="lblDefecating" type="Label" parent="hudPriority/lblSliders"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 637.0
margin/right = 75.0
margin/bottom = 651.0
custom_fonts/font = ExtResource( 4 )
text = "Defecating"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lblScrapping" type="Label" parent="hudPriority/lblSliders"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 693.0
margin/right = 70.0
margin/bottom = 707.0
custom_fonts/font = ExtResource( 4 )
text = "Scrapping"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lblRefining" type="Label" parent="hudPriority/lblSliders"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 713.0
margin/right = 69.0
margin/bottom = 727.0
custom_fonts/font = ExtResource( 4 )
text = "Refining"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lblCrafting" type="Label" parent="hudPriority/lblSliders"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 735.0
margin/right = 69.0
margin/bottom = 749.0
custom_fonts/font = ExtResource( 4 )
text = "Crafting"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lblFishing" type="Label" parent="hudPriority/lblSliders"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 618.0
margin/right = 67.0
margin/bottom = 632.0
custom_fonts/font = ExtResource( 4 )
text = "Fishing"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lblPriority" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 101.0
margin/top = 579.0
margin/right = 161.0
margin/bottom = 593.0
custom_fonts/font = ExtResource( 4 )
text = "Priorities"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lblGathering" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 42.0
margin/top = 597.0
margin/right = 102.0
margin/bottom = 611.0
custom_fonts/font = ExtResource( 4 )
text = "Gathering"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lblGathering1" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 41.0
margin/top = 671.0
margin/right = 101.0
margin/bottom = 685.0
custom_fonts/font = ExtResource( 4 )
text = "Production"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


